added linked lists

--- a/arrays/arrays.html
+++ b/arrays/arrays.html
@@ -13,5 +13,6 @@
     <script type="text/javascript" src="merge-sorted-arrays.js"></script>
     <script type="text/javascript" src="two-sum.js"></script>
     <script type="text/javascript" src="contains-duplicate.js"></script>
+    <script type="text/javascript" src="first-recurring-character.js"></script>
   </body>
 </html>
