--- a/stacks-and-queues/stacks-and-queues.html
+++ b/stacks-and-queues/stacks-and-queues.html
@@ -8,5 +8,6 @@
     <h1>Stacks and Queues</h1>
     <script type="text/javascript" src="stacks-arrays.js"></script>
     <script type="text/javascript" src="stacks-linked-lists.js"></script>
+    <script type="text/javascript" src="queue-implementation.js"></script>
   </body>
 </html>
